--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="col-md-7">
           <h1 class="heading gsap-reveal-hero mb-3"><strong>Kusum Gahlot<span class="text-primary">.</span></strong></h1>
           <h2 class="subheading gsap-reveal-hero mb-4">
-            Hello 👋🏻 and welcome to my world!! If you are interested to know more about this electrical engineer based out of Bangalore, India 🇮🇳, you've come just to the right place. <br/> <br/> Prepare to witness firsthand the unwavering professionalism and unparalleled skillset 👨🏻‍💻. You can directly access any specific are of your interest as well using the menu on the right. Happy scrolling 😀.
+            Hello 👋🏻 and welcome to my world!! If you are interested to know more about this electrical engineer based out of Bangalore, India 🇮🇳, you've come just to the right place. <br/> <br/> Prepare to witness firsthand the unwavering professionalism and unparalleled skillset 👨🏻‍💻. You can directly access any specific area of your interest as well using the menu on the right. Happy scrolling 😀.
           </h2>
           <p class="gsap-reveal-hero"><a href="resume.pdf" target="_blank" class="btn btn-outline-black">My Resume</a></p> 
           <!-- <p class="gsap-reveal-hero"><a href="https://untree.co/" target="_blank" class="btn btn-outline-black">More about me here</a></p>     -->
