--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               </div>
               <h3 class="gsap-reveal-hero">Engineering Drawings</h3>
               <p class="gsap-reveal-hero">Communicate design ideas and technical information to engineers and other professionals throughout the design process.</p>
-              <p class="gsap-reveal-hero">It majorly invloves creation of layout (plan & section, DSLP,UHF sensor, cable trench, earthing, erection key diagram), foundation and loading, SLD, gas SLD & LT AC/DC SLD, 3D model & assembly overview.</p>
+              <p class="gsap-reveal-hero">It involves DSLP (Razevig), conductor sizing, battery sizing, CT sizing, cable sizing, earthing, cable length & accessories, AC/DC load, thermal loss, resistance.</p>
             </div>
           </div>
           <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
@@ -154,7 +154,7 @@
               <h3 class="gsap-reveal-hero">Engineering Documents</h3>
               <p class="gsap-reveal-hero">It helps to communicate ideas, ensure quality and consistency, and comply with standards and regulations.</p>
               <p class="gsap-reveal-hero">
-                Tools involved
+                Documents  involved
                 <ul class="list-unstyled links mb-4">
                   <li>BOQ</li>
                   <li>GTP</li>
@@ -172,7 +172,7 @@
               </div>
               <h3 class="gsap-reveal-hero">Supplier Data Validation</h3>
               <p class="gsap-reveal-hero">Checking the accuracy and quality of source data before using, importing or otherwise processing data.</p>
-              <p class="gsap-reveal-hero">Key skills and tools used are circuit breaker, disconnector/earthing switch, transformer(power tranformer, CT & VT), surge arrester, cable end unit, bushing.</p>
+              <p class="gsap-reveal-hero">Key equipments are circuit breaker, disconnector/earthing switch, transformer(power tranformer, CT & VT), surge arrester, cable end unit, bushing.</p>
             </div>
           </div>
 
@@ -230,7 +230,7 @@
             <div class="progressbar" data-animate="false">
               <div>
                 <img src="images/hitachi_energy_logo.jpeg" alt="Image" class="img-fluid rounded-circle mb-3 company-logo">
-                <p class="caption"><strong>Hitachi Energy Switzerland Ltd.</strong></p>
+                <p class="caption"><strong>Hitachi Energy</strong></p>
                 <p class="caption">Lead Project Engineer</p>
                 <p class="caption">Jul, 2021 - Present</p>
                 <p class="caption">Bangalore</p>
