--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               </div>
               <h3 class="gsap-reveal-hero">Engineeringing Design Calculation</h3>
               <p class="gsap-reveal-hero">Refers to the mathematical techniques used in designing and evaluating different components of an engineering project.</p>
-              <p class="gsap-reveal-hero">Key skills and tools used are DSLP (Razevig), conductor sizing, battery sizing, CT sizing, cable sizing, Cable length & calculations for earthing, AC/DC load, thermal loss, resistance.</p>
+              <p class="gsap-reveal-hero">It includes DSLP (Razevig), conductor sizing, battery sizing, CT sizing, cable sizing, Cable length & calculations for earthing, AC/DC load, thermal loss, resistance.</p>
             </div>
           </div>
 
@@ -355,7 +355,7 @@
           <div class="col-lg-7text-center mx-auto">
             <div class="widget">
               <!-- <h3>Contact</h3> -->
-              <address>2d, 2nd Floor, The Greens Pmr Arcade, Ombr Layout, Chikka Banaswadi, BENGALURU, KARNATAKA 560043, India</address>
+              <address>Bengaluru, India</address>
               <ul class="list-unstyled links mb-4">
                 <li><a href="tel://918010614679">(+91) 80106 14679</a></li>
                 <li><a href="mailto:kusumgahlot0212@gmail.com ">kusumgahlot0212@gmail.com </a></li>
